--- a/config.org
+++ b/config.org
@@ -77,13 +77,13 @@ Force splits to open on the right
 ** FILE MANAGER (dired)
 Image previews in dired
 #+BEGIN_SRC emacs-lisp
-(evil-define-key 'normal peep-dired-mode-map (kbd "j") 'peep-dired-next-file)
-(map!
-  (:after dired
-    (:map dired-mode-map
-     "C-x i" #'peep-dired
-     )))
-(add-hook 'peep-dired-hook 'evil-normalize-keymaps)
+;; (map! :n peep-dired-mode-map  "j" 'peep-dired-next-file)
+;; (map!
+;;   (:after dired
+;;     (:map dired-mode-map
+;;      "C-x i" #'peep-dired
+;;      )))
+;; (add-hook 'peep-dired-hook 'evil-normalize-keymaps)
 #+END_SRC
 
 ** AUDIO PLAYER (emms)
@@ -140,33 +140,6 @@ Image previews in dired
 
 custom-set-faces was added by Custom.
 If you edit it by hand, you could mess it up, so be careful.
-Your init file should contain only one such instance.
-If there is more than one, they won't work right.
-#+BEGIN_SRC emacs-lisp
-(custom-set-faces
- )
-#+END_SRC
-
-** SETTING UP ORG-GCAL FOR SYNCING EVENTS TO GOOGLE CALDENDAR.
-#+BEGIN_SRC emacs-lisp
-(setq org-gcal-client-id "928920761867-j314hfqcd7qoqgdfnan9iiecal6p1cos.apps.googleusercontent.com"
-      org-gcal-client-secret "4WFGzA_pqMIQwZIiQN6aNJdC"
-      org-gcal-file-alist '(("bikashd@ivypods.com" .  "~/Documents/org/schedule.org")
-                            ("bikash@ivypods.com" .  "~/Documents/org/task.org")))
-#+END_SRC
-
-** EMACS CALC CUSTOM UNITS.
-#+BEGIN_SRC emacs-lisp
-(setq math-additional-units '(
-  (GiB "1024 * MiB" "Giga Byte")
-
-  (MiB "1024 * KiB" "Mega Byte")
-  (KiB "1024 * B" "Kilo Byte")
-  (B nil "Byte")
-  (Gib "1024 * Mib" "Giga Bit")
-  (Mib "1024 * Kib" "Mega Bit")
-  (Kib "1024 * b" "Kilo Bit")
-  (b "B / 8" "Bit")))
 ;; This resets calc's cache
 (setq math-units-table nil)
 #+END_SRC
@@ -276,9 +249,9 @@ If there is more than one, they won't work right.
 #+end_src
 ** NEOTREE CONFIGURATION
 #+begin_src emacs-lisp
-(evil-define-key 'normal neotree-mode-map
-        (kbd "|") #'neotree-enter-vertical-split
-        (kbd "-") #'neotree-enter-horizontal-split)
+(map!  :map neotree-mode-map
+       :n (kbd "|") #'neotree-enter-vertical-split
+       :n (kbd "-") #'neotree-enter-horizontal-split)
 #+end_src
 ** HYDRA CONFIGURATION
 #+begin_src emacs-lisp
@@ -292,5 +265,7 @@ If there is more than one, they won't work right.
 #+end_src
 ** ADDING SOME HANDY SHORTCUTS
 #+begin_src emacs-lisp
-(map! map: Man-mode-map :desc "Goto a section quickly" :n  (kbd "g t") #'Man-goto-section)
+(map! :map Man-mode-map :desc "Goto a section quickly" :n  (kbd "g t") #'Man-goto-section)
+;; had to do with this way, map! kept throwing error for some reason.
+(evil-define-key 'normal 'global (kbd "SPC m z") #'cheat-sh)
 #+end_src
